--- a/src/App.css
+++ b/src/App.css
@@ -765,6 +765,9 @@ nav {
 }
 
 @media (max-width: 450px){
+  .carousel{
+    max-height: 200px;
+  }
   .about-heading{
     font-size: 2.5rem;
     margin-right: 1rem;
