--- a/src/Components/Modal/Modal.css
+++ b/src/Components/Modal/Modal.css
@@ -73,3 +73,35 @@ body.active-modal {
     font-weight: 300;
     width: 90%;
 }
+
+@media (max-width: 1343px){
+    img{
+        width: calc(200px);
+        align-self: center;
+    }
+    .company-text{
+        align-items: start;
+    }
+    .company-content{
+        width: 300px;
+    }
+    .company-description{
+        text-align: start;
+    }
+}
+
+@media (max-width: 1226px){
+    .modal-content{
+        justify-content: center;
+        gap: 1rem;
+    }
+    .comp-description{
+        font-size:1rem;
+    }
+}
+
+@media (max-width: 856px){
+    .company-content{
+        width: 220px;   
+    }
+}
