--- a/src/App.css
+++ b/src/App.css
@@ -20,16 +20,64 @@ body {
 body {
   background-color: #f6f6f6;
 }
+.wrapper{
+  width: 100%;
+  margin-bottom: 5rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.image{
+  width: 500px;
+  position: relative;
+}
+.content{
+  width: 100%;
+  height: 100%;
+  top:0;
+  left:0;
+  position: absolute;
+  background: rgba(187,37,46,0.6);
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  padding-left: 2rem;
+  flex-direction: column;
+  opacity: 0;
+  transition: 0.6s;
+}
+.content:hover{
+  opacity: 1;
+}
+.content-title{
+  font-size: 2rem;
+  color: #fff;
+  margin-bottom: 15px;
+}
+.content-button{
+  font-size: 19px;
+  color: #fff;
+  border: 1px solid #fff;
+  padding: 1rem 1.5rem;
+  text-decoration: none;
+}
+
+.content > * {
+  transform: translateY(25px);
+  transition: transfrom 0.5s;
+}
 
 nav {
-  display: flex;
   background-color: #1B1A1A;
   min-height: 90px;
 }
 .nav-inner{
   display: flex;
+  flex-direction: row;
   align-items: center;
   justify-content: space-between;
+  margin-left: 2rem;
+  margin-right: 1rem;
 }
 .navLink{
   text-decoration: none;
@@ -63,7 +111,7 @@ nav {
   background-color: rgb(234, 234, 234);
 }
 .navbar-menu-container svg {
-  font-size: 1.5rem;
+  display: flex;
   cursor: pointer;
 }
 .home-banner-container {
@@ -159,21 +207,28 @@ nav {
   position: relative;
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  justify-content: center;
+}
+.about-right{
+  width: 450px;
 }
 .about-heading{
-  font-size: 10rem;
-  font-weight: 800;
+  font-size: 8rem;
+  font-weight:900 !important;
   width: 50%;
   line-height: 0.8;
   letter-spacing: -4px;
-  margin-right: 3.5rem;
+  /* margin-right: 3.5rem; */
 }
 .about-subheading{
+  width: 100%;
   color: #303030;
-  font-size: 1.5rem;
+  font-size: 1.3rem;
   font-weight: 300;
-  margin-bottom: 2.25rem;
+}
+
+.about-subheading:last-child{
+  margin-top: 2.25rem;
 }
 
 .about-section-image-container {
@@ -206,9 +261,13 @@ nav {
 .member-head{
   width: 66%;
 }
-.member-list li{
-  font-size: 1.5rem;
-  margin-bottom: 1rem;
+.member-list{
+  display: flex;
+  justify-content: space-around;
+}
+.member{
+  text-align: center;
+  max-width: 200px;
 }
 .watch-video-button {
   margin-left: 2rem;
@@ -248,6 +307,7 @@ nav {
 .article-title{
   margin-bottom: 1.5rem;
   text-decoration: none;
+  color:balck;
 }
 .article-button{
   color: black;
@@ -257,15 +317,18 @@ nav {
   text-transform: uppercase;
   transition: all 0.2s;
 }
-.article-button:hover{
-  background-color: black;
-  color: white;
-}
+
+
+
 .videos{
   margin-top: 5rem;
   display: flex;
   justify-content: center;
+  align-items: center;
   gap: 5rem;
+}
+.video{
+  margin-left: 2rem;
 }
 .contact-form-container {
   background-color: white;
@@ -456,6 +519,7 @@ nav {
   margin-right: 20px;
 }
 .privellege-right p{
+  width: 80%;
   font-size: 1.4rem;
   font-weight: 300;
   margin-bottom: 28px;
@@ -464,7 +528,7 @@ nav {
   font-weight: bold;
 }
 .privellege-paragraph{
-  width: 90%;
+  width: 20%;
 }
 .articles{
   display: flex;
@@ -487,7 +551,7 @@ nav {
   margin-top: 3rem;
 }
 .event-title{
-  font-size: 3.75rem;
+  font-size: 3rem;
 }
 .event-details{
   font-size: 1.5rem;
@@ -501,6 +565,7 @@ nav {
 .event-button{
   background-color: #A41515;
   color: #fff;
+  font-weight: 700;
   font-size: 3.125rem;
   padding: 2rem 3rem;
   border-radius: 3rem;
@@ -551,6 +616,10 @@ nav {
 }
 
 @media (max-width: 1083px) {
+  .nav-inner{
+    justify-content: space-between;
+    margin-right: 4rem;
+  }
   .logo{
     width: 250px;
   }
@@ -573,7 +642,10 @@ nav {
     width: 20vw !important;
   }
   .about-heading{
-    font-size: 7rem;
+    font-size: 6rem;
+  }
+  .about-right{
+    width: 350px;
   }
   .about-subheading{
     font-size: 1rem;
@@ -607,9 +679,20 @@ nav {
     width: 350px;
     height: 250px;
   }
+  .event-title{
+    font-size: 2rem;
+  }
 
 }
 @media (max-width: 800px) {
+  .nav{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+  .navbar-menu-container{
+    font-size: 2rem;
+  }
   .navbar-links-container a {
     margin-right: 0.6rem;
     font-size: 0.7rem;
@@ -640,9 +723,18 @@ nav {
   }
   .navbar-menu-container {
     display: flex;
+    padding-right: 2.3rem;
+  }
+  .about-section-container{
+    gap: 1rem;
   }
   .about-heading{
-    font-size: 5rem;
+    font-size: 4.5rem;
+    width: 50%;
+  }
+  .about-subheading{
+    font-size: 14px;
+    width: 300px;
   }
   .member-head{
     font-size: 3rem;
@@ -671,7 +763,7 @@ nav {
     font-size:0.8rem;
   }
   .event-title{
-    font-size: 2.5rem;
+    font-size: 2rem;
   }
   .event-button{
     font-size: 2rem;
@@ -710,6 +802,9 @@ nav {
   .about-background-image-container {
     display: none;
   }
+  .navbar-menu-container{
+    padding-right: 1rem
+  }
   .member-head{
     font-size: 2.5rem;
   }
@@ -726,13 +821,19 @@ nav {
   }
   .about-section-container{
     margin-top: 2rem;
+    gap: 1rem;
   }
   .about-heading{
-    font-size: 5rem;
+    font-size: 3rem;
   }
   .about-subheading{
-    font-size: 0.8rem;
+    font-size: 0.6rem;
     margin-bottom: 0.5rem;
+    width: 240px;
+    padding-left: 40px;
+  }
+  .about-right{
+    width: 220px;
   }
   .footer-upper{
     gap: 5rem;
@@ -775,11 +876,25 @@ nav {
   .video{
     width: 200px;
     height: 150px;
-    
+  }
+  .member{
+    font-size: 0.7rem;
+    max-width: 150px;
   }
 }
 
 @media (max-width: 450px){
+  .member{
+    font-size: 0.5rem;
+    max-width: 150px;
+  }
+  .logo{
+    width: 200px;
+  }
+  .navbar-menu-container svg{
+    margin-right: 0.6rem;
+    font-size:1.4rem;
+  }
   .home-banner-container{
     padding-top: 0;
   }
@@ -799,12 +914,11 @@ nav {
   .member-head{
     font-size: 1.4rem;
   }
+  .about-heading{
+    font-size: 4rem;
+  }
   .about-subheading{
     font-size: 0.6rem;
-  }
-  .member-list li{
-    font-size: 1rem;
-    margin-bottom: 0.2rem;
   }
   .gallery-img{
     margin-right: 1rem;
