--- a/src/App.css
+++ b/src/App.css
@@ -123,7 +123,7 @@ nav {
 .carousel{
   padding-left: 2rem;
   color: #fff;
-  height: 65vh;
+  height: 45vh;
   max-height: 1500px;
   width: 75vw;
 }
@@ -266,8 +266,9 @@ nav {
   justify-content: space-around;
 }
 .member{
+  font-size: 1.3rem;
   text-align: center;
-  max-width: 200px;
+  max-width: 240px;
 }
 .watch-video-button {
   margin-left: 2rem;
@@ -603,7 +604,7 @@ nav {
     font-size: 8rem;
   }
   .carousel{
-    height:55vh;
+    height:25vh;
   }
   .video{
     width: 450px;
@@ -631,7 +632,7 @@ nav {
 
   .carousel{
     width:70vw;
-    height:40vh;
+    height:20vh;
   }
   .slick-next{
     right: 50px !important;
@@ -698,7 +699,7 @@ nav {
     font-size: 0.7rem;
   }
   .carousel{
-    max-height: 270px;
+    max-height: 170px;
   }
   .slick-next{
     right: 5% !important;
@@ -899,7 +900,7 @@ nav {
     padding-top: 0;
   }
   .carousel{
-    max-height: 200px;
+    max-height: 100px;
   }
   .about-heading{
     font-size: 2.5rem;
