--- a/src/App.css
+++ b/src/App.css
@@ -127,6 +127,11 @@ nav {
   max-height: 1500px;
   width: 75vw;
 }
+.right{
+  display: flex;
+  justify-content: flex-start;
+  margin-left: 1rem;
+}
 .box{
   background: lightgreen;
   width: 23vw !important;
@@ -139,7 +144,7 @@ nav {
   margin: 0 0.1rem;
 }
 .slick-next{
-  right: 30px !important;
+  right: 40px !important;
   font-size: 46px;
   color: black !important;
 }
@@ -164,9 +169,8 @@ nav {
   padding: 0 10px 10px 13px;
 }
 .journal{
-  width: 22vw;
-  margin-left: 2rem;
-  padding-right: 1rem;
+  width: 10vw;
+  height: 20vh;
 }
 .primary-heading {
   font-size: clamp(2rem, 5vw, 4rem);
@@ -269,6 +273,7 @@ nav {
   font-size: 1.3rem;
   text-align: center;
   max-width: 240px;
+  font-weight: 300;
 }
 .watch-video-button {
   margin-left: 2rem;
@@ -329,7 +334,7 @@ nav {
   gap: 5rem;
 }
 .video{
-  margin-left: 2rem;
+  margin-left: 0rem;
 }
 .contact-form-container {
   background-color: white;
@@ -527,6 +532,8 @@ nav {
 }
 .privellege-bold{
   font-weight: bold;
+  text-decoration: none;
+  color: black;
 }
 .privellege-paragraph{
   width: 20%;
@@ -625,6 +632,12 @@ nav {
     width: 250px;
   }
 
+  .slick-next{
+    right: 0px !important;
+  }
+  .slick-next:before, .slick-prev:before{
+    font-size: 23px !important;
+  }
   .navbar-links-container a {
     margin-right: 0.7rem;
     font-size: 0.7rem;
@@ -632,12 +645,10 @@ nav {
 
   .carousel{
     width:70vw;
-    height:20vh;
+    height:25vh;
   }
   .slick-next{
-    right: 50px !important;
-    font-size: 46px;
-    color: black !important;
+    right: 40px !important;
   }
   .box{
     width: 20vw !important;
@@ -653,6 +664,12 @@ nav {
   }
   .member-heading{
     margin-top: 7rem;
+  }
+  .member-head{
+    font-size: 4rem;
+  }
+  .member{
+    font-size: 1rem;
   }
   .primary-button {
     font-size: 1rem;
@@ -683,6 +700,10 @@ nav {
   .event-title{
     font-size: 2rem;
   }
+  .event-button{
+    font-size: 2rem;
+
+  }
 
 }
 @media (max-width: 800px) {
@@ -705,14 +726,13 @@ nav {
     right: 5% !important;
   }
   .slick-next:before{
-    font-size: 20px !important;
+    font-size: 15px !important;
     padding: 3px 10px 10px 10px;
   }
   .slick-prev:before{
-    font-size: 20px !important;
+    font-size: 15px !important;
     padding: 3px 10px 10px 10px;
   }
-  
   .slick-prev{
     left: 10px !important;
   }
@@ -737,6 +757,10 @@ nav {
     font-size: 14px;
     width: 300px;
   }
+  .journal{
+    width: 12vw;
+    height: 20vh;
+  }
   .member-head{
     font-size: 3rem;
   }
@@ -747,6 +771,10 @@ nav {
     margin-top: 2rem;
     font-size: 2rem;
   }
+  .member{
+    font-size: 0.8rem;
+    width: 24%;
+  }
   .privellege-heading{
     font-size: 2rem;
   }
@@ -754,11 +782,11 @@ nav {
     margin-top:2rem;
   }
   .privellege-right p{
-    font-size: 0.8rem;
+    font-size: 0.7rem;
     margin-bottom: 0.5rem;
   }
   .privellege-img{
-    width: 250px;
+    width: 220px;
   }
   .article-button{
     font-size:0.8rem;
@@ -779,6 +807,9 @@ nav {
     width: 250px;
     height: 150px;
   }
+  .videos{
+    gap: 1rem;
+  }
 }
 @media (max-width: 600px) {
   .box{
@@ -795,10 +826,7 @@ nav {
     font-size: 20px !important;
     padding: 3px 10px 10px 10px;
   }
-  .journal{
-    width: 30vw;
-    margin-left: 0;
-  }
+
   .home-bannerImage-container,
   .about-background-image-container {
     display: none;
@@ -809,29 +837,22 @@ nav {
   .member-head{
     font-size: 2.5rem;
   }
-  .videos{
-    margin-top: 2rem;
-    gap: 1rem;
-  }
   .contact-page-wrapper{
     margin-bottom: 0;
   }
-  .video{
-    width: 250px;
-    height: 150px;
-  }
   .about-section-container{
+  
     margin-top: 2rem;
     gap: 1rem;
   }
   .about-heading{
+    width: 200px;
     font-size: 3rem;
   }
   .about-subheading{
     font-size: 0.6rem;
     margin-bottom: 0.5rem;
-    width: 240px;
-    padding-left: 40px;
+    width: 220px;
   }
   .about-right{
     width: 220px;
@@ -871,8 +892,8 @@ nav {
     width: 250px;
   }
   .videos{
-    justify-content: space-between;
-    gap: 0.3rem;
+    justify-content: center;
+    gap: 1rem;
   }
   .video{
     width: 200px;
@@ -881,6 +902,15 @@ nav {
   .member{
     font-size: 0.7rem;
     max-width: 150px;
+  }
+  .privellege-img{
+    width: 170px;
+  }
+  .privellege-right p{
+    font-size: 0.5rem;
+  }
+  .right{
+    margin-left: 0;
   }
 }
 
@@ -915,11 +945,15 @@ nav {
   .member-head{
     font-size: 1.4rem;
   }
-  .about-heading{
-    font-size: 4rem;
-  }
   .about-subheading{
-    font-size: 0.6rem;
+    width: 150px;
+    font-size: 0.5rem;
+  }
+  .about-right{
+    width: 150px;
+  }
+  .about-subheading:last-child{
+    margin-top: 15px;
   }
   .gallery-img{
     margin-right: 1rem;
@@ -934,7 +968,7 @@ nav {
     margin-right: 0.6rem;
   }
   .privellege-right p{
-    font-size: 0.6rem;
+    font-size: 0.4rem;
     margin-bottom: 0.2rem;
   }
   .article-button{
@@ -969,4 +1003,20 @@ nav {
     font-size: 0.7rem;
   }
 
+}
+
+@media (max-width: 345px){
+  .video{
+    width: 140px;
+    height: 110px;
+  }
+  .videos{
+    gap: 0.5rem;
+  }
+  .footer-upper{
+    gap: 3rem;
+  }
+  .footer-lower{
+    gap: 3rem;
+  }
 }
