--- a/src/Components/Modal/Modal.css
+++ b/src/Components/Modal/Modal.css
@@ -85,7 +85,7 @@ body.active-modal {
 }
 .create h2{
     font-size: 20px;
-    color: #f1356d;
+    color: #A41515;
     margin-bottom: 30px;
 }
 .create input, .create textarea, .create select {
@@ -97,7 +97,7 @@ body.active-modal {
     display: block;
 }
 .create button {
-    background: #f1356d;
+    background: #A41515;
     color: #fff;
     border: 0;
     padding: 8px;
