--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,12 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: "Montserrat", sans-serif !important;
+}
+.font-link {
+  font-family: 'Roboto Flex', sans-serif;
+}
+.font-head{
+  font-family: 'Merriweather', serif;
 }
 .App {
   min-height: 100vh;
@@ -169,8 +174,8 @@ nav {
   padding: 0 10px 10px 13px;
 }
 .journal{
-  width: 10vw;
-  height: 20vh;
+  width: 160px;
+  height: 190px;
 }
 .primary-heading {
   font-size: clamp(2rem, 5vw, 4rem);
@@ -226,7 +231,7 @@ nav {
 }
 .about-subheading{
   width: 100%;
-  color: #303030;
+  color: black;
   font-size: 1.3rem;
   font-weight: 300;
 }
@@ -517,7 +522,7 @@ nav {
   font-weight: bold;
   font-size: 4.375rem;
   text-align: center;
-  color: #303030;
+  color: black;
 }
 .privellege-inner{
   display: flex;
@@ -597,7 +602,7 @@ nav {
 }
 .footer-lower{
   display: flex;
-  gap: 11rem; 
+  gap: 7rem; 
   padding-bottom: 3rem;
 }
 .footer-lower-social{
@@ -606,6 +611,9 @@ nav {
   padding-bottom: 3rem;
 }
 .footer-single li{
+  list-style: none;
+}
+.footer-lower-single li{
   list-style: none;
 }
 .video{
@@ -732,9 +740,17 @@ nav {
   }
   .event-button{
     font-size: 2rem;
-
   }
+  .journal{
+    width: 100px;
+    height: 120px;
+  }
+}
 
+@media (max-width: 915px){
+  .footer-lower{
+    flex-wrap: wrap;
+  }
 }
 @media (max-width: 800px) {
   .nav{
@@ -800,8 +816,11 @@ nav {
     width: 300px;
   }
   .journal{
-    width: 12vw;
-    height: 20vh;
+    width: 85px;
+    height: 115px;
+  }
+  .right{
+    margin-left: 0;
   }
   .member-head{
     font-size: 3rem;
@@ -852,7 +871,14 @@ nav {
   .videos{
     gap: 1rem;
   }
+  .footer-upper{
+    font-size: 1rem;  
+  }
+  .footer-lower{
+    font-size: 1rem;
+  }
 }
+
 @media (max-width: 600px) {
   .box{
     width: 27vw !important;
@@ -861,19 +887,19 @@ nav {
     right: 12% !important;
   }
   .slick-next:before{
-    font-size: 20px !important;
-    padding: 3px 10px 10px 10px;
+    font-size: 10px !important;
+    padding: 5px 7px 10px 10px;
   }
   .articles{
     max-height: 40px;
   }
   .slick-prev:before{
-    font-size: 20px !important;
-    padding: 3px 10px 10px 10px;
+    font-size: 10px !important;
+    padding: 5px 7px 10px 10px;
   }
   .journal{
-    width: 13vw;
-    height: 15vh;
+    width: 65px;
+    height: 95px;
   }
   .content{
     padding-left: 1rem;
@@ -1000,10 +1026,11 @@ nav {
   }
   .carousel{
     max-height: 150px;
+    padding-left: 16px;
   }
   .journal{
-    width: 13vw;
-    height: 12vh;
+    width: 50px;
+    height: 80px;
   }
   .about-heading{
     font-size: 2.5rem;
@@ -1116,6 +1143,10 @@ nav {
   .content{
     padding-left: 0.5rem;
     height: 95%;
+  }
+  .journal{
+    width: 40px;
+    height: 70px;
   }
   .content-title{
     margin-bottom:0px;
