--- a/src/App.css
+++ b/src/App.css
@@ -179,8 +179,8 @@ nav {
   padding: 0 10px 10px 13px;
 }
 .journal{
-  width: 140px;
-  height: 170px;
+  width: 170px;
+  height: 200px;
 }
 .primary-heading {
   font-size: clamp(2rem, 5vw, 4rem);
@@ -658,8 +658,11 @@ nav {
     font-size: 0.8rem;
   }
   .journal{
-    width: 110px;
-    height: 130px;
+    width: 120px;
+    height: 150px;
+  }
+  .right-heading{
+    font-size: 1.05rem;
   }
 }
 
@@ -759,7 +762,11 @@ nav {
   }
   .journal{
     width: 100px;
-    height: 120px;
+    height: 130px;
+  }
+  .right-heading{
+    font-size: 0.8rem;
+    margin-top: 0.2rem;
   }
   .footer-upper{
     gap: 18%;
@@ -791,7 +798,7 @@ nav {
     font-size: 0.7rem;
   }
   .carousel{
-    max-height: 170px;
+    max-height: 180px;
   }
   .content-title{
     margin-top: 15px;
@@ -845,8 +852,11 @@ nav {
     width: 300px;
   }
   .journal{
-    width: 85px;
-    height: 115px;
+    width: 70px;
+    height: 100px;
+  }
+  .right-heading{
+    font-size: 0.5rem;
   }
   .right{
     margin-left: 0;
@@ -993,7 +1003,7 @@ nav {
   }
   .right-heading{
     margin-top: 0.2rem;
-    font-size: 0.6rem;
+    font-size: 0.3rem;
     margin-left: 0;
   }
   .event-title{
