--- a/src/App.css
+++ b/src/App.css
@@ -95,6 +95,7 @@ nav {
   color: #fff;
   margin-left: 1rem;
   margin-top: 1rem;
+  margin-bottom: 2rem;
 }
 .navbar-links-container a {
   margin-right: 1.5rem;
