--- a/src/App.css
+++ b/src/App.css
@@ -827,6 +827,9 @@ nav {
   .slick-prev{
     left: 10px !important;
   }
+  .right, .right-heading{
+    padding-left: 3rem;
+  }
   .right-heading{
     font-size: 0.8rem;
     margin-left: 0;
@@ -1146,7 +1149,7 @@ nav {
     font-size: 1.2rem;
   }
   .right-heading{
-    font-size: 0.5rem;
+    font-size: 0.35rem;
     margin-left: 0;
   }
   .event-month{
@@ -1175,6 +1178,12 @@ nav {
   .video{
     width: 140px;
     height: 110px;
+  }
+  .right-heading{
+    font-size: 0.3rem;
+  }
+  .right, .right-heading{
+    padding-left: 1rem;
   }
   .videos{
     gap: 0.5rem;
