--- a/src/Components/Modal/Modal.css
+++ b/src/Components/Modal/Modal.css
@@ -128,6 +128,9 @@ textarea:focus::placeholder {
     .create-heading{
         font-size: 1.5rem;
     }
+    .create ul li{
+        font-size: 0.7rem;
+    }
 }
 
 @media (max-width: 400px){
@@ -136,5 +139,11 @@ textarea:focus::placeholder {
     }
     .create-heading{
         font-size: 1rem;
+    }
+    .create ul li{
+        font-size: 0.5rem;
+    }
+    .modal-content {
+        min-width: 200px;
     }
 }
