--- a/src/App.css
+++ b/src/App.css
@@ -362,7 +362,7 @@ nav {
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: 5rem;
+  gap: 2rem;
 }
 .video{
   margin-left: 0rem;
@@ -651,8 +651,8 @@ nav {
   list-style: none;
 }
 .video{
-  width: 500px;
-  height:300px;
+  aspect-ratio: 16 / 9;
+  width: 40% !important;
 }
 
 @media (max-width: 1250px) {
@@ -672,8 +672,8 @@ nav {
     margin-bottom: 2rem;
   }
   .video{
-    width: 450px;
-    height: 250px;
+    aspect-ratio: 16 / 9;
+    width: 40% !important;
   }
   .navbar-links-container a {
     margin-right: 1.5rem;
@@ -791,8 +791,8 @@ nav {
     margin-bottom: 1rem;
   }
   .video{
-    width: 350px;
-    height: 250px;
+    aspect-ratio: 16 / 9;
+    width: 40% !important;
   }
   .event-title{
     font-size: 2rem;
@@ -946,11 +946,11 @@ nav {
     margin-top: 2rem;
   }
   .video{
-    width: 250px;
-    height: 150px;
+    aspect-ratio: 16 / 9;
+    width: 40% !important;
   }
   .videos{
-    gap: 1rem;
+    gap: 0.2rem;
   }
   .footer-upper{
     font-size:0.8rem;  
@@ -1077,11 +1077,11 @@ nav {
   }
   .videos{
     justify-content: center;
-    gap: 1rem;
+    gap: 0.2rem;
   }
   .video{
-    width: 200px;
-    height: 150px;
+    aspect-ratio: 16/9;
+    width: 40% !important;
   }
   .member{
     font-size: 0.6rem;
@@ -1192,8 +1192,8 @@ nav {
     font-size: 0.5rem;
   }
   .video{
-    width: 160px;
-    height: 130px;
+    aspect-ratio: 16 / 9;
+    width: 40% !important;
   }
   .event-wrapper{
     margin-top: 3rem;
@@ -1231,15 +1231,24 @@ nav {
   .about-right{
     width: 135px;
   }
-  .navbar-menu-container{
+  .ytp-large-play-button{
+    width: 32px !important;
+    height: 24px !important;
+  } 
+  .navbar-menu-container svg{
     margin-right: 0;
   }
+  .navbar-menu-container{
+    padding-right: 0;
+    position: relative;
+    left: -10px;
+  }
   .video{
-    width: 140px;
-    height: 110px;
+    aspect-ratio: 16 / 9;
+    width: 40% !important;
   }
   .videos{
-    gap: 0.5rem;
+    gap: 0.2rem;
   }
   .footer-upper{
     gap: 3rem;
