--- a/src/Components/Modal/Modal.css
+++ b/src/Components/Modal/Modal.css
@@ -76,6 +76,9 @@ body.active-modal {
     padding-bottom: 1rem;
     border-bottom: 1px solid gray;
 }
+.create-bold{
+    font-weight: bold;
+}
 .create input:focus{
     outline: none;
     border-bottom: 1px solid black;
